refactor: eliminate cwd-worktree assumption, centralize sessionId validation in HookInput
- WorktreeContext now resolved from git rather than assuming cwd is a worktree
- GetDiffOutput, WarnBaseBranchEdit, and other hooks use git-based resolution
- HookInput.validateSessionId() uses requireThat Jackson validator for fail-fast validation
- Remove HookInput.empty() ??? callers now pass valid hard-coded session IDs
- Remove getRequiredSessionId() ??? getSessionId() always returns a valid value
- Rename getCompositeAgentId() to getCatAgentId()
- Remove static SESSION_CACHE from WorktreeLock (caused test contamination)
- All tests updated: inject valid session_id, expect IllegalArgumentException on blank/missing